Initial layout added - service and provider page

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,7 +9,7 @@
     <!-- Bottom Action Bar menu -->
     <string name="menu_profile">Profile</string>
     <string name="menu_home">Home</string>
-    <string name="menu_bored">Bored?</string>
+    <string name="menu_items">Menu</string>
     <string name="menu_create">Create</string>
     
     
@@ -19,6 +19,6 @@
     <string name="done">DONE</string>
     
      <!--  startup screen -->
-     <string name="service_provider_text">Are you a service provider ?</string>
-     <string name="service_text">Are you looking for a service ?</string>
+     <string name="service_provider_text">Service provider</string>
+     <string name="service_text">Looking for a service ?</string>
 </resources>
